# stash

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
stash/: __main__.py  crud.py  database.py  models.py  schemas.py
stash/src/js/: index.js  stash.js
stash/templates/: 404.html  index.html  stash.html
