[tool.poetry]
name = "stash"
version = "0.0.1"
description = "A minimal, open source pastebin."
authors = ["isaa-ctaylor <isaac@isaactaylor.xyz>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
bcrypt = "^4.2.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
